# LpCVT

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md
.github/workflows/: linux-build.yml  macos-build.yml
sources/LpCVT/: main.cpp
src/: main.cpp
src/LpCVT/: README.txt  main.cpp
src/LpCVT/algebra/: F_Lp.cpp  integration_simplex.h  measure.h  three_planes_intersection.h  voro_func.h
src/LpCVT/combinatorics/: RVD.h  clipped_VD.h  delaunay.cpp  delaunay_CGAL.cpp  mesh.cpp  mesh.h  symbolic_vertex.h
src/LpCVT/common/: matrix.h
src/LpCVT/others/: Geex_test_algebra.cpp  Geex_test_algebra.h  Geex_test_combinatorics.cpp  Geex_test_combinatorics.h  IO.cpp  IO.h  LBFGSpp_solver.h  functional.cpp  functional.h  macro.h  optimizer.cpp  optimizer.h
